v2: fix to be able to click and drag the cardtridge into the console to then cause the game to start loading on the screen and the camera shifts to look at screen and slowly zooms until fully looking at it (at that point it should be in our normal html p

--- a/intro-scene.css
+++ b/intro-scene.css
@@ -8,7 +8,7 @@
     cursor: grab;
 }
 
-#intro-scene-container:active {
+#intro-scene-container.dragging {
     cursor: grabbing;
 }
 
